k8s/productivity/affine/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: affine
  namespace: productivity
  annotations:
    reloader.stakater.com/auto: "true"
    secrets.infisical.com/auto-reload: "true"
spec:
  selector:
    matchLabels:
      app: affine
  template:
    metadata:
      labels:
        app: affine
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: affine-data
      containers:
        - name: affine
          image: ghcr.io/toeverything/affine-graphql:canary
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: 512Mi
              cpu: 500m
          ports:
            - containerPort: 3010
              protocol: TCP
              name: http
          startupProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: data
              mountPath: /root/.affine/config
              subPath: config/
            - name: data
              mountPath: /root/.affine/storage
              subPath: storage/
