k8s/productivity/affine/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: productivity
spec:
  selector:
    app: affine
  ports:
    - port: 3010
      targetPort: 443
      protocol: TCP
      name: http
