k8s/productivity/affine/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: productivity
  labels:
    name: affine
spec:
  rules:
    - host: notes.zefirsroyal.cloud
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: affine
                port:
                  name: http
